--- a/src/main/webapp/vistas/dependencias/Create.xhtml
+++ b/src/main/webapp/vistas/dependencias/Create.xhtml
@@ -13,9 +13,9 @@
                     <div class="ui-fluid">
                     <p:panelGrid columns="2" rendered="#{dependenciasController.selected != null}" layout="grid" columnClasses="ui-grid-col-5,ui-grid-col-14" styleClass="ui-panelgrid-blank">
                         <p:outputLabel value="#{bundle.DependenciasLabel_siglas}" for="siglas" />
-                        <p:inputText id="siglas" value="#{dependenciasController.selected.siglas}" title="#{bundle.DependenciasTitle_siglas}" required="true" requiredMessage="#{bundle.DependenciasRequiredMessage_siglas}" />
+                        <p:inputText id="siglas" value="#{dependenciasController.selected.siglas}" title="#{bundle.DependenciasTitle_siglas}" required="true" requiredMessage="#{bundle.DependenciasRequiredMessage_siglas}" validatorMessage="#{bundle.DependenciasRequiredMessage_siglas}" />
                         <p:outputLabel value="#{bundle.DependenciasLabel_nombre}" for="nombre" />
-                        <p:inputText id="nombre" value="#{dependenciasController.selected.nombre}" title="#{bundle.DependenciasTitle_nombre}" required="true" requiredMessage="#{bundle.DependenciasRequiredMessage_nombre}"/>
+                        <p:inputText id="nombre" value="#{dependenciasController.selected.nombre}" title="#{bundle.DependenciasTitle_nombre}" required="true" requiredMessage="#{bundle.DependenciasRequiredMessage_nombre}" validatorMessage="#{bundle.DependenciasRequiredMessage_nombre}"/>
                     </p:panelGrid>
                     </div>    
                     <p:commandButton actionListener="#{dependenciasController.create}" value="#{bundle.Save}" update="display,:DependenciasListForm:datalist,:growl" oncomplete="handleSubmit(args,'DependenciasCreateDialog');">
