--- a/src/main/webapp/vistas/controlsolicitudes/List.xhtml
+++ b/src/main/webapp/vistas/controlsolicitudes/List.xhtml
@@ -31,20 +31,8 @@
                                 <h:outputText value="#{bundle.ListControlsolicitudesTitle_solicitud}"/>
                             </f:facet>
                             <h:outputText value="#{item.solicitud}"/>
-                        </p:column>
-                        <p:column filterBy="#{item.gestor}">
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListControlsolicitudesTitle_gestor}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.gestor}"/>
-                        </p:column>
-                        <p:column filterBy="#{item.idpersonalatencion}">
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListControlsolicitudesTitle_idpersonalatencion}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.idpersonalatencion}"/>
-                        </p:column>                        
-                        <p:column filterBy="#{item.fechaasignacion}">
+                        </p:column>                    
+                        <p:column>
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListControlsolicitudesTitle_fechaasignacion}"/>
                             </f:facet>
@@ -64,7 +52,7 @@
                             </f:facet>
                             <h:outputText value="#{item.observaciones}"/>
                         </p:column>
-                        <p:column filterBy="#{item.fechatermino}">
+                        <p:column>
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListControlsolicitudesTitle_fechatermino}"/>
                             </f:facet>
@@ -72,7 +60,7 @@
                                 <f:convertDateTime pattern="MM/dd/yyyy" />
                             </h:outputText>
                         </p:column>
-                        <p:column filterBy="#{item.fechacancelacion}">
+                        <p:column>
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListControlsolicitudesTitle_fechacancelacion}"/>
                             </f:facet>
@@ -80,7 +68,7 @@
                                 <f:convertDateTime pattern="MM/dd/yyyy" />
                             </h:outputText>
                         </p:column>
-                        <p:column filterBy="#{item.totalimagenes}">
+                        <p:column>
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListControlsolicitudesTitle_totalimagenes}"/>
                             </f:facet>
@@ -91,12 +79,6 @@
                                 <h:outputText value="#{bundle.ListControlsolicitudesTitle_proyecto}"/>
                             </f:facet>
                             <h:outputText value="#{item.proyecto}"/>
-                        </p:column>
-                        -<p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListControlsolicitudesTitle_status}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.status}"/>
                         </p:column>
                         <f:facet name="footer">
                             <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":ControlsolicitudesViewForm" oncomplete="PF('ControlsolicitudesViewDialog').show()" disabled="#{empty controlsolicitudesController.selected}"/>
