--- a/src/main/webapp/vistas/procesoratificacion/List.xhtml
+++ b/src/main/webapp/vistas/procesoratificacion/List.xhtml
@@ -14,6 +14,9 @@
         </ui:define>
 
         <ui:define name="body">
+            <f:metadata>
+                <f:viewParam name="ratificacion" value="#{procesoratificacionController.idratificacion}" ></f:viewParam>
+            </f:metadata>
             <h:form id="ProcesoratificacionListForm">
                 <p:panel header="#{bundle.ListProcesoratificacionTitle}">
                     <p:contextMenu for="datalist">                       
