--- a/src/main/webapp/vistas/solicitudesInternet/View.xhtml
+++ b/src/main/webapp/vistas/solicitudesInternet/View.xhtml
@@ -8,7 +8,7 @@
 
     <ui:composition>
 
-        <p:dialog id="SolicitudesInternetViewDlg" widgetVar="SolicitudesInternetViewDialog" closable="false" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.ViewSolicitudesInternetTitle}">
+        <p:dialog id="SolicitudesInternetViewDlg" widgetVar="SolicitudesInternetViewDialog" closable="false" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.ViewSolicitudesInternetTitle}" responsive="true">
             <h:form id="SolicitudesInternetViewForm">
                 <h:panelGroup id="display">    
                     <p:growl id="growlViewSolici"  sticky="true" showDetail="true"/>
