--- a/src/main/webapp/vistas/controlsolicitudes/ViewSolicitudes.xhtml
+++ b/src/main/webapp/vistas/controlsolicitudes/ViewSolicitudes.xhtml
@@ -77,7 +77,7 @@
                   <p:tab title="Imagenes Solicitadas">
                                   <p:panel>                              
                                     <h:form id="updateForC">
-                                        <p:dataTable id="ctlgImg" value="#{controlsolicitudesController.imgSolicitud()}" 
+                                        <p:dataTable id="ctlgImg" value="#{controlsolicitudesController.imagensolicitud}" 
                                                  var="item"
                                                  paginator="true"
                                                  rowsPerPageLabel="10,20,30"
